--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/preset-env": "^7.27.2",
+    "@babel/preset-typescript": "^7.27.1",
     "@nuxt/types": "^2.15.8",
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/tailwindcss": "^5.1.3",
+    "@types/jest": "^30.0.0",
     "@vue/test-utils": "^1.3.0",
     "@vueuse/core": "^8.7.5",
     "@vueuse/nuxt": "^8.7.5",
@@ -51,6 +53,7 @@
     "jest-environment-jsdom": "^30.0.2",
     "jest-serializer-vue": "^3.1.0",
     "postcss": "^8.4.4",
+    "ts-jest": "^29.4.0",
     "vue-jest": "^3.0.7"
   },
   "resolutions": {
